--- a/KS.html
+++ b/KS.html
@@ -5,7 +5,7 @@
 	<title>Konstantin Stamov </title>
 	<style>
 		.content {
-			background-color: rgb(204, 242, 188, .6);
+			background-color: rgba(204, 242, 188, .8);
 			width: 800px;
 			border-style: groove;
 			border-width: 15px;
@@ -134,6 +134,12 @@
 		$("#passions").on( "mouseleave", function() {
   			$("#passionsText").css( {"background-color": cellColorOff , "color": textColorOff } );
   			$(this).css("border-color", "rgb(172, 180, 193)");
+  			$("#passionsText").on( "mouseover", function() {
+  				$(this).css({"background-color": "pink"} )
+  			});
+  			$("#passionsText").on( "mouseleave", function() {
+  				$(this).css({"background-color": cellColorOff} )
+  			});
 		});
 
 		//My way to this point
@@ -144,6 +150,12 @@
 		$("#way").on( "mouseleave", function() {
   			$("#wayText").css( {"background-color": cellColorOff , "color": textColorOff } );
   			$(this).css("border-color", "rgb(172, 180, 193)");
+  			$("#wayText").on( "mouseover", function() {
+  				$(this).css({"background-color": "pink"} )
+  			});
+  			$("#wayText").on( "mouseleave", function() {
+  				$(this).css({"background-color": cellColorOff} )
+  			});
 		});
 
 		//My favourite programming language
@@ -154,6 +166,12 @@
 		$("#language").on( "mouseleave", function() {
   			$("#languageText").css( {"background-color": cellColorOff , "color": textColorOff } );
   			$(this).css("border-color", "rgb(172, 180, 193)");
+  			$("#languageText").on( "mouseover", function() {
+  				$(this).css({"background-color": "pink"} )
+  			});
+  			$("#languageText").on( "mouseleave", function() {
+  				$(this).css({"background-color": cellColorOff} )
+  			});
 		});
 
 		//My favourite movie
@@ -164,6 +182,12 @@
 		$("#movie").on( "mouseleave", function() {
   			$("#movieText").css( {"background-color": cellColorOff , "color": textColorOff } );
   			$(this).css("border-color", "rgb(172, 180, 193)");
+  			$("#movieText").on( "mouseover", function() {
+  				$(this).css({"background-color": "pink"} )
+  			});
+  			$("#movieText").on( "mouseleave", function() {
+  				$(this).css({"background-color": cellColorOff} )
+  			});
 		});
 
 		//My favourite band
@@ -174,6 +198,12 @@
 		$("#band").on( "mouseleave", function() {
   			$("#bandText").css( {"background-color": cellColorOff , "color": textColorOff } );
   			$(this).css("border-color", "rgb(172, 180, 193)");
+  			$("#bandText").on( "mouseover", function() {
+  				$(this).css({"background-color": "pink"} )
+  			});
+  			$("#bandText").on( "mouseleave", function() {
+  				$(this).css({"background-color": cellColorOff} )
+  			});
 		});
 
 		//Slideshow
